[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycons3rt3"
version = "0.0.25a0"
description = "A python3 library for CONS3RT assets and API calls"
authors = [
    {name = "Joe Yennaco", email = "joe.yennaco@jackpinetech.com"},
    {name = "Todd Fisher", email = "todd.fisher@jackpinetech.com"},
    {name = "John Paulo", email = "john.paulo@jackpinetech.com"}
]
requires-python = ">=3.6"
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "boto3",
    "botocore",
    "cryptography>=42.0.5",
    "jinja2>=3.1.3",
    "paramiko>=3.4.0",
    "progressbar2",
    "pyyaml",
    "requests>=2.31.0",
    "requests[security]>=2.31.0",
    "requests-toolbelt",
    "s3transfer",
    "scp"
]
keywords = ["cons3rt", "pycons3rt", "pycons3rt3", "assets", "arcus"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3"
]

[project.scripts]
asset = "pycons3rt3.asset:main"
cons3rt = "pycons3rt3.cons3rt:main"
deployment = "pycons3rt3.deployment:main"
migrate = "pycons3rt3.hostmigration:main"
nexus = "pycons3rt3.nexus:main"
pycons3rt_setup = "pycons3rt3.osutil:main"
ractl = "pycons3rt3.remoteaccesscontoller:main"
s3organizer = "pycons3rt3.s3organizer:main"
slack = "pycons3rt3.slack:main"

[project.urls]
Homepage = "https://pypi.org/project/pycons3rt3/"
Documentation = "https://github.com/cons3rt/pycons3rt3/blob/master/README.md"
Repository = "https://github.com/cons3rt/pycons3rt3.git"
Issues = "https://github.com/cons3rt/pycons3rt3/issues"
Changelog = "https://github.com/cons3rt/pycons3rt3/blob/master/CHANGELOG.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = []
namespaces = false
